--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1497,19 +1497,50 @@ a {
   text-align: center;
   color: #ffffff;
 }
-.cid-uQQx4m4U1E {
+.cid-uR6ysyBOxG {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: #ebebe9;
+  background-image: url("../../../assets/images/mbr.jpg");
 }
-.cid-uQQx4m4U1E .mbr-text {
-  color: #000000;
+.cid-uR6ysyBOxG .mbr-fallback-image.disabled {
+  display: none;
 }
-.cid-uQQx4m4U1E .mbr-section-subtitle {
-  color: #000000;
+.cid-uR6ysyBOxG .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-uR6ysyBOxG .card {
+  border-radius: 0 !important;
+}
+@media (min-width: 992px) {
+  .cid-uR6ysyBOxG .card {
+    border-right: 1px solid white;
+  }
+}
+@media (max-width: 991px) {
+  .cid-uR6ysyBOxG .card {
+    border-right: 0px;
+    border-bottom: 1px solid white;
+  }
+}
+.cid-uR6ysyBOxG .wrapper {
+  padding: 30px 0;
+}
+.cid-uR6ysyBOxG .mbr-section-title {
+  color: #fafafa;
+}
+.cid-uR6ysyBOxG .mbr-text,
+.cid-uR6ysyBOxG .mbr-section-btn {
+  color: #ffffff;
+  text-align: left;
 }
 .cid-uQQQqk98gj {
-  padding-top: 0rem;
+  padding-top: 1rem;
   padding-bottom: 1rem;
   background-image: url("../../../assets/images/201308051616110.manchester-united.jpg");
 }
