--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1500,7 +1500,7 @@ a {
 .cid-uR6ysyBOxG {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-image: url("../../../assets/images/background1.jpg");
+  background-color: #212525;
 }
 .cid-uR6ysyBOxG .mbr-fallback-image.disabled {
   display: none;
